--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,11 @@
 	"version": "1.0",
 	"description": "Includes QUnit and runs any tests in the page",
 	"permissions": [
-		"tabs", "http://*/*"
+		"tabs", "http://*/*", "https://*/*"
 	],
 	"background": {
     	"scripts": ["background.js"]
+
   	},
 	"browser_action": {
 		"default_icon": "icon.png"
